@@ -1,27 +1,5 @@
 package de.caluga.test.mongo.suite.base;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import de.caluga.test.mongo.suite.data.*;
-import org.bson.types.ObjectId;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.MethodSource;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import de.caluga.morphium.Morphium;
 import de.caluga.morphium.MorphiumConfig;
 import de.caluga.morphium.StatisticKeys;
@@ -33,6 +11,18 @@ import de.caluga.morphium.driver.MorphiumId;
 import de.caluga.morphium.driver.inmem.InMemoryDriver;
 import de.caluga.morphium.objectmapping.MorphiumTypeMapper;
 import de.caluga.morphium.query.Query;
+import de.caluga.test.mongo.suite.data.*;
+import org.bson.types.ObjectId;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.util.*;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author stephan
@@ -45,16 +35,6 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public BasicFunctionalityTest() {
     }
 
-    // @Test
-    // public void shardTest() throws Exception {
-    //     MorphiumConfig cfg=new MorphiumConfig();
-    //     cfg.setHostSeed("hercules1.dev.genios.de:27017");
-    //     cfg.setDatabase("hercules");
-    //     Morphium m=new Morphium(cfg);
-    //
-    //     log.info("connected");
-    // }
-    //
     @ParameterizedTest
     @MethodSource("getMorphiumInstances")
     public void testAdditionalData(Morphium morphium) throws Exception {
@@ -69,7 +49,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
 
                 if (i % 10 == 0) {
                     log.info("Stored..." + i);
-               }
+                }
             }
 
             log.info("Stored...");
@@ -88,6 +68,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
         }
     }
 
+    @SuppressWarnings("resource")
     @ParameterizedTest
     @MethodSource("getMorphiumInstances")
     public void testConnectionFail(Morphium morphium) {
@@ -97,13 +78,13 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
 
         try (morphium) {
             log.info("----> Running with: " + morphium.getDriver().getName());
-            //trying to connect with the sepcified driver to non existent mongo
+            //trying to connect with the sepcified driver to non-existent mongo
             MorphiumConfig cfg = MorphiumConfig.fromProperties(morphium.getConfig().asProperties());
             cfg.setCredentialsEncrypted(false);
             cfg.setHostSeed("localhost:12312"); //does not exist, but should be easy to find
             Morphium m = new Morphium(cfg);
             log.info("No exception!");
-            assertTrue(false, "Exception not thrown!");
+            fail("Exception not thrown!");
         } catch (Exception e) {
             log.info("Got exception!", e);
         }
@@ -176,7 +157,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void subObjectQueryTest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -184,11 +165,11 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             q = q.f("embed.testValueLong").eq(null).f("entityEmbeded.binaryData").eq(null);
             String queryString = q.toQueryObject().toString();
             log.info(queryString);
-            assert(queryString.contains("embed.test_value_long") && queryString.contains("entityEmbeded.binary_data"));
+            assert (queryString.contains("embed.test_value_long") && queryString.contains("entityEmbeded.binary_data"));
             q = q.f("embed.test_value_long").eq(null).f("entity_embeded.binary_data").eq(null);
             queryString = q.toQueryObject().toString();
             log.info(queryString);
-            assert(queryString.contains("embed.test_value_long") && queryString.contains("entityEmbeded.binary_data"));
+            assert (queryString.contains("embed.test_value_long") && queryString.contains("entityEmbeded.binary_data"));
         }
     }
 
@@ -197,7 +178,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void subObjectQueryTestUnknownField(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -213,7 +194,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void sortTest(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -228,17 +209,17 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             Query<UncachedObject> q = morphium.createQueryFor(UncachedObject.class);
             q = q.f(UncachedObject.Fields.counter).gt(0).sort("-counter", "strValue");
             List<UncachedObject> lst = q.asList();
-            assert(!lst.get(0).getStrValue().equals(lst.get(1).getStrValue()));
+            assert (!lst.get(0).getStrValue().equals(lst.get(1).getStrValue()));
             q = q.q().f("counter").gt(0).sort("str_value", "-counter");
             List<UncachedObject> lst2 = q.asList();
-            assert(lst2.get(0).getStrValue().equals(lst2.get(1).getStrValue()));
+            assert (lst2.get(0).getStrValue().equals(lst2.get(1).getStrValue()));
             log.info("Sorted");
             q = morphium.createQueryFor(UncachedObject.class);
             q = q.f("counter").gt(0).limit(5).sort("-counter");
             int st = q.asList().size();
             q = morphium.createQueryFor(UncachedObject.class);
             q = q.f("counter").gt(0).sort("-counter").limit(5);
-            assert(st == q.asList().size()) : "List length differ?";
+            assert (st == q.asList().size()) : "List length differ?";
         }
     }
 
@@ -247,7 +228,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void arrayOfPrimitivesTest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -269,14 +250,14 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             float[] floatData = new float[100];
 
             for (int i = 0; i < floatData.length; i++) {
-                floatData[i] = (float)(i / 100.0);
+                floatData[i] = (float) (i / 100.0);
             }
 
             o.setFloatData(floatData);
             double[] doubleData = new double[100];
 
             for (int i = 0; i < doubleData.length; i++) {
-                doubleData[i] = (float)(i / 100.0);
+                doubleData[i] = (float) (i / 100.0);
             }
 
             o.setDoubleData(doubleData);
@@ -291,23 +272,23 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             morphium.reread(o);
 
             for (int i = 0; i < o.getIntData().length; i++) {
-                assert(o.getIntData()[i] == binaryData[i]);
+                assert (o.getIntData()[i] == binaryData[i]);
             }
 
             for (int i = 0; i < o.getLongData().length; i++) {
-                assert(o.getLongData()[i] == longData[i]);
+                assert (o.getLongData()[i] == longData[i]);
             }
 
             for (int i = 0; i < o.getFloatData().length; i++) {
-                assert(o.getFloatData()[i] == floatData[i]);
+                assert (o.getFloatData()[i] == floatData[i]);
             }
 
             for (int i = 0; i < o.getDoubleData().length; i++) {
-                assert(o.getDoubleData()[i] == doubleData[i]);
+                assert (o.getDoubleData()[i] == doubleData[i]);
             }
 
             for (int i = 0; i < o.getBoolData().length; i++) {
-                assert(o.getBoolData()[i] == bd[i]);
+                assert (o.getBoolData()[i] == bd[i]);
             }
         }
     }
@@ -317,7 +298,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void updateBinaryDataTest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -335,7 +316,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             morphium.reread(o);
 
             for (int i = 0; i < binaryData.length; i++) {
-                binaryData[i] = (byte)(i + 2);
+                binaryData[i] = (byte) (i + 2);
             }
 
             o.setBinaryData(binaryData);
@@ -344,7 +325,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             TestUtils.waitForWrites(morphium, log);
 
             for (int i = 0; i < o.getBinaryData().length; i++) {
-                assert(o.getBinaryData()[i] == binaryData[i]);
+                assert (o.getBinaryData()[i] == binaryData[i]);
             }
         }
     }
@@ -354,7 +335,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void binaryDataTest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -372,7 +353,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             morphium.reread(o);
 
             for (int i = 0; i < o.getBinaryData().length; i++) {
-                assert(o.getBinaryData()[i] == binaryData[i]);
+                assert (o.getBinaryData()[i] == binaryData[i]);
             }
         }
     }
@@ -383,7 +364,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
         try (morphium) {
             String tstName = new Object() {
             }
-            .getClass().getEnclosingMethod().getName();
+                    .getClass().getEnclosingMethod().getName();
             log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
             createUncachedObjects(morphium, 100);
             var q = morphium.createQueryFor(UncachedObject.class).f(UncachedObject.Fields.counter).eq(15).f(UncachedObject.Fields.strValue).eq("nothing");
@@ -396,7 +377,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void idTest(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -419,11 +400,11 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             while (uc == null) {
                 Thread.sleep(100);
                 uc = morphium.findById(UncachedObject.class, last.getMorphiumId());
-                assert(System.currentTimeMillis() - s < morphium.getConfig().getMaxWaitTime());
+                assert (System.currentTimeMillis() - s < morphium.getConfig().getMaxWaitTime());
             }
 
             assertNotNull(uc, "Not found?!?");
-            assert(uc.getCounter() == last.getCounter()) : "Different Object? " + uc.getCounter() + " != " + last.getCounter();
+            assert (uc.getCounter() == last.getCounter()) : "Different Object? " + uc.getCounter() + " != " + last.getCounter();
         }
     }
 
@@ -432,7 +413,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void orTest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -452,7 +433,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             List<UncachedObject> lst = q.asList();
 
             for (UncachedObject o : lst) {
-                assert(o.getCounter() < 10 || o.getStrValue().equals("Uncached 50")) : "Value did not match: " + o;
+                assert (o.getCounter() < 10 || o.getStrValue().equals("Uncached 50")) : "Value did not match: " + o;
                 log.info(o.toString());
             }
 
@@ -466,7 +447,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
                 morphium.store(uc);
             }
 
-            assert(morphium.getStatistics().get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.UncachedObject") == null) : "Cached Uncached Object?!?!?!";
+            assert (morphium.getStatistics().get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.UncachedObject") == null) : "Cached Uncached Object?!?!?!";
         }
     }
 
@@ -475,7 +456,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void uncachedSingeTest(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -495,17 +476,19 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             Thread.sleep(500);
             log.info("Searching for objects");
             checkUncached(morphium);
-            assert(morphium.getStatistics().get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.UncachedObject") == null) : "Cached Uncached Object?!?!?!";
+            assert (morphium.getStatistics().get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.UncachedObject") == null) : "Cached Uncached Object?!?!?!";
         }
     }
 
     @Test
     public void testAnnotationCache() {
-        Morphium morphium = (Morphium) getMorphiumInstances().findFirst().get().get()[0];
-        Entity e = morphium.getARHelper().getAnnotationFromHierarchy(EmbeddedObject.class, Entity.class);
-        assert(e == null);
-        Embedded em = morphium.getARHelper().getAnnotationFromHierarchy(EmbeddedObject.class, Embedded.class);
-        assertNotNull(em);;
+        if (getMorphiumInstances().findFirst().isPresent()) {
+            Morphium morphium = (Morphium) getMorphiumInstances().findFirst().get().get()[0];
+            Entity e = morphium.getARHelper().getAnnotationFromHierarchy(EmbeddedObject.class, Entity.class);
+            assert (e == null);
+            Embedded em = morphium.getARHelper().getAnnotationFromHierarchy(EmbeddedObject.class, Embedded.class);
+            assertNotNull(em);
+        }
     }
 
     @ParameterizedTest
@@ -513,7 +496,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void uncachedListTest(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -533,7 +516,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             log.info("Storing a list  took " + dur + " ms");
             Thread.sleep(1000);
             checkUncached(morphium);
-            assert(morphium.getStatistics().get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.UncachedObject") == null) : "Cached Uncached Object?!?!?!";
+            assert (morphium.getStatistics().get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.UncachedObject") == null) : "Cached Uncached Object?!?!?!";
         }
     }
 
@@ -546,11 +529,11 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             Query<UncachedObject> q = morphium.createQueryFor(UncachedObject.class);
             q.f("counter").eq(i);
             List<UncachedObject> l = q.asList();
-            assert(l != null && !l.isEmpty()) : "Nothing found!?!?!?!? Value: " + i;
-            UncachedObject fnd = l.get(0);
+            assert (l != null && !l.isEmpty()) : "Nothing found!?!?!?!? Value: " + i;
+            UncachedObject fnd = l.getFirst();
             assertNotNull(fnd, "Error finding element with id " + i);
-            assert(fnd.getCounter() == i) : "Counter not equal: " + fnd.getCounter() + " vs. " + i;
-            assert(fnd.getStrValue().equals("Uncached " + i)) : "value not equal: " + fnd.getCounter() + "(" + fnd.getStrValue() + ") vs. " + i;
+            assert (fnd.getCounter() == i) : "Counter not equal: " + fnd.getCounter() + " vs. " + i;
+            assert (fnd.getStrValue().equals("Uncached " + i)) : "value not equal: " + fnd.getCounter() + "(" + fnd.getStrValue() + ") vs. " + i;
         }
 
         dur = System.currentTimeMillis() - start;
@@ -564,7 +547,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
         start = System.currentTimeMillis();
 
         for (int idx = 1; idx <= NO_OBJECTS * 3.5; idx++) {
-            int i = (int)(Math.random() * (double) NO_OBJECTS);
+            int i = (int) (Math.random() * (double) NO_OBJECTS);
 
             if (i == 0) {
                 i = 1;
@@ -575,10 +558,10 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             List<CachedObject> l = q.asList();
             assertNotNull(l);
             assertFalse(l.isEmpty());
-            CachedObject fnd = l.get(0);
+            CachedObject fnd = l.getFirst();
             assertNotNull(fnd, "Error finding element with id " + i);
-            assert(fnd.getCounter() == i) : "Counter not equal: " + fnd.getCounter() + " vs. " + i;
-            assert(fnd.getValue().equals("Cached " + i)) : "value not equal: " + fnd.getCounter() + " vs. " + i;
+            assert (fnd.getCounter() == i) : "Counter not equal: " + fnd.getCounter() + " vs. " + i;
+            assert (fnd.getValue().equals("Cached " + i)) : "value not equal: " + fnd.getCounter() + " vs. " + i;
         }
 
         dur = System.currentTimeMillis() - start;
@@ -591,7 +574,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void cachedWritingTest(Morphium m) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + m.getDriver().getName());
 
         try (m) {
@@ -607,8 +590,6 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
 
             long dur = System.currentTimeMillis() - start;
             log.info("Storing (in Cache) single took " + dur + " ms");
-            //        wiatForAsyncOpToStart(1000);
-            //       TestUtils.waitForWrites(morphium,log);
             var q = m.createQueryFor(CachedObject.class);
 
             while (q.countAll() < NO_OBJECTS) {
@@ -622,8 +603,8 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             randomCheck(m);
             Map<String, Double> statistics = m.getStatistics();
             Double uc = statistics.get("X-Entries resultCache|for: de.caluga.test.mongo.suite.data.UncachedObject");
-            assert(uc == null || uc == 0) : "Cached Uncached Object?!?!?!";
-            assert(statistics.get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.CachedObject") > 0) : "No Cached Object cached?!?!?!";
+            assert (uc == null || uc == 0) : "Cached Uncached Object?!?!?!";
+            assert (statistics.get("X-Entries for: resultCache|de.caluga.test.mongo.suite.data.CachedObject") > 0) : "No Cached Object cached?!?!?!";
         }
     }
 
@@ -632,7 +613,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void checkListWriting(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -647,7 +628,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             }
 
             //noinspection ConstantConditions
-            assert(false) : "Exception missing!";
+            assert (false) : "Exception missing!";
         }
     }
 
@@ -656,7 +637,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void checkToStringUniqueness(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -678,7 +659,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             q = morphium.createQueryFor(CachedObject.class);
             q = q.f(CachedObject.Fields.counter).gt(5);
             s = q.toString();
-            assert(!t.equals(s)) : "Values should not be equal: s=" + s + " t=" + t;
+            assert (!t.equals(s)) : "Values should not be equal: s=" + s + " t=" + t;
         }
     }
 
@@ -687,7 +668,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void cachedObjectWriting(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("----------------> Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -723,7 +704,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void mixedListWritingTest(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("----------------> Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -770,12 +751,12 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void listOfIdsTest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
             morphium.dropCollection(ListOfIdsContainer.class);
-            TestUtils.waitForConditionToBecomeTrue(1500, "Collection not dropped", ()->!morphium.exists(ListOfIdsContainer.class));
+            TestUtils.waitForConditionToBecomeTrue(1500, "Collection not dropped", () -> !morphium.exists(ListOfIdsContainer.class));
             List<MorphiumId> lst = new ArrayList<>();
 
             for (int i = 0; i < 10; i++) {
@@ -811,12 +792,12 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void insertTest(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
             morphium.dropCollection(UncachedObject.class);
-            TestUtils.waitForConditionToBecomeTrue(1500, "Collection not dropped", ()->!morphium.exists(UncachedObject.class));
+            TestUtils.waitForConditionToBecomeTrue(1500, "Collection not dropped", () -> !morphium.exists(UncachedObject.class));
             UncachedObject uc = new UncachedObject();
             uc.setCounter(1);
             uc.setStrValue("A value");
@@ -851,12 +832,12 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void insertListTest(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
             morphium.dropCollection(UncachedObject.class);
-            TestUtils.waitForConditionToBecomeTrue(1500, "Collection not dropped", ()->!morphium.exists(UncachedObject.class));
+            TestUtils.waitForConditionToBecomeTrue(1500, "Collection not dropped", () -> !morphium.exists(UncachedObject.class));
             List<UncachedObject> lst = new ArrayList<>();
 
             for (int i = 0; i < 100; i++) {
@@ -867,7 +848,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             }
 
             morphium.insert(lst);
-            TestUtils.waitForConditionToBecomeTrue(5000, "Did not write?", ()->TestUtils.countUC(morphium) == 100);
+            TestUtils.waitForConditionToBecomeTrue(5000, "Did not write?", () -> TestUtils.countUC(morphium) == 100);
             List<UncachedObject> lst2 = new ArrayList<>();
 
             for (int i = 0; i < 10; i++) {
@@ -877,7 +858,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
                 lst2.add(uc);
             }
 
-            lst2.add(lst.get(0));
+            lst2.add(lst.getFirst());
             Thread.sleep(100);
             boolean ex = false;
 
@@ -897,11 +878,11 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void customMapperObjectIdTest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
-            MorphiumTypeMapper<ObjectIdTest> mapper = new MorphiumTypeMapper<ObjectIdTest>() {
+            MorphiumTypeMapper<ObjectIdTest> mapper = new MorphiumTypeMapper<>() {
                 @Override
                 public Object marshall(ObjectIdTest o) {
                     Map serialized = new HashMap();
@@ -909,12 +890,13 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
                     serialized.put("_id", o.id);
                     return serialized;
                 }
+
                 @Override
                 public ObjectIdTest unmarshall(Object d) {
                     Map obj = ((Map) d);
                     ObjectIdTest o = new ObjectIdTest();
                     o.id = new ObjectId(obj.get("_id").toString());
-                    o.value = (String)(obj.get("value"));
+                    o.value = (String) (obj.get("value"));
                     return o;
                 }
             };
@@ -943,7 +925,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void objectIdIdstest(Morphium morphium) {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -951,10 +933,10 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
             o.value = "test1";
             morphium.store(o);
             assertNotNull(o.id);
-            assertTrue(o.id instanceof ObjectId);
+            assertInstanceOf(ObjectId.class, o.id);
             morphium.reread(o);
             assertNotNull(o.id);
-            assertTrue(o.id instanceof ObjectId);
+            assertInstanceOf(ObjectId.class, o.id);
         }
     }
 
@@ -963,7 +945,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void testFindOneAndDelete(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
@@ -981,7 +963,7 @@ public class BasicFunctionalityTest extends MultiDriverTestBase {
     public void testFindOneAndUpdate(Morphium morphium) throws Exception {
         String tstName = new Object() {
         }
-        .getClass().getEnclosingMethod().getName();
+                .getClass().getEnclosingMethod().getName();
         log.info("Running test " + tstName + " with " + morphium.getDriver().getName());
 
         try (morphium) {
